[package]
name = "webkit_wasm_bug_reproducer"
version = "1.0.0"
authors = [
  "Dietmar Maurer <dietmar@proxmox.com>",
]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
wasm-logger = "0.2"
log = "0.4.6"
yew = { version = "0.21",  features = ["csr"] }
wasm-bindgen = "0.2"
gloo-timers = { version = "0.2" }